--- a/style.css
+++ b/style.css
@@ -16,3 +16,19 @@ h1 {
   width: 200px;
   padding: 10px;
 }
+a{
+ text-decoration: none; /* remove underlining on anchor tags */
+ color: black; /* pick the color you want */
+}
+.assign img {
+ padding: 10px; /* change this from margin to padding */
+ border: 2px solid black; /* try dashed, dotted */
+}
+.assign {
+ border-radius: 20px; /* curved corners */
+}
+Explain a:hover, img:hover, h1:hover
+a:hover {
+ text-decoration: none; /* remove underlining on anchor tags */
+ color: blaxk; /* pick the color you want */
+}
