--- a/style.css
+++ b/style.css
@@ -29,6 +29,6 @@ a{
 }
 Explain a:hover, img:hover, h1:hover
 a:hover {
- text-decoration: none; /* remove underlining on anchor tags */
- color: blaxk; /* pick the color you want */
+ text-decoration: none; /
+ color: black; /* 
 }
