--- a/style.css
+++ b/style.css
@@ -25,10 +25,10 @@ a{
  border: 2px solid black; /* try dashed, dotted */
 }
 .assign {
- border-radius: 20px; /* curved corners */
+ border-radius: 15px; /* curved corners */
 }
 Explain a:hover, img:hover, h1:hover
 a:hover {
  text-decoration: none; /
- color: black; /* 
+ color: darkred; /* 
 }
