--- a/style.css
+++ b/style.css
@@ -22,13 +22,13 @@ a{
 }
 .assign img {
  padding: 10px; /* change this from margin to padding */
- border: 2px solid black; /* try dashed, dotted */
+ border: 2px darkred; /* try dashed, dotted */
 }
 .assign {
- border-radius: 15px; /* curved corners */
+ border-radius: 20px; /* curved corners */
 }
 Explain a:hover, img:hover, h1:hover
 a:hover {
- text-decoration: none; /
- color: darkred; /* 
+ text-decoration: none; 
+ color: black;
 }
